wxc/include/ewxw/wxc_glue.h

TClass(ELJLocale) wxGetELJLocale(  );
void*      wxGetELJTranslation( TStringVoid sz );
/* wxLocale */
TClassDef(wxLocale)
int        wxLocale_AddCatalog( TSelf(wxLocale) _obj, void* szDomain );
void       wxLocale_AddCatalogLookupPathPrefix( TSelf(wxLocale) _obj, void* prefix );
TClass(wxLocale) wxLocale_Create( int _name, int _flags );
void       wxLocale_Delete( TSelf(wxLocale) _obj );
TClass(wxLocale) wxLocale_GetLocale( TSelf(wxLocale) _obj );
int        wxLocale_GetName( TSelf(wxLocale) _obj, void* _ref );
TClass(wxString) wxLocale_GetString( TSelf(wxLocale) _obj, void* szOrigString, void* szDomain );
TBool      wxLocale_IsLoaded( TSelf(wxLocale) _obj, void* szDomain );
TBool      wxLocale_IsOk( TSelf(wxLocale) _obj );